[package]
name = "duckduckgo"
version = "0.1.2"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
edition = "2021"
description = "🦆 A CLI and library for colorful DuckDuckGo searches."
license = "MIT"
homepage = "https://github.com/wiseaidev/duckduckgo"
documentation = "https://docs.rs/duckduckgo"
repository = "https://github.com/wiseaidev/duckduckgo"
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["cli", "duckduckgo", "search", "dorks", "api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
once_cell = "1.19.0"
reqwest = { version="0.12.4", features=["cookies",] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
urlencoding = "2.1.3"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "symbols"
